fix(overview): remove vertical scroll and white space

--- a/src/pages/ValidatorOnboarding/Overview/overviewLayout.module.css
+++ b/src/pages/ValidatorOnboarding/Overview/overviewLayout.module.css
@@ -8,7 +8,7 @@
 .overviewCard {
   border-radius: 16px;
   border: 1px solid rgba(0, 0, 0, 0.15);
-  padding: 12px 16px;
+  padding: 10px 12px;
   background-color: #fff;
 }
 
