--- a/src/pages/ValidatorOnboarding/Overview/validatorLayout.module.css
+++ b/src/pages/ValidatorOnboarding/Overview/validatorLayout.module.css
@@ -25,14 +25,14 @@
   display: flex;
   flex-wrap: wrap;
   height: 100%;
-  padding-left: 2rem;
+  padding-left: 1.5rem;
 }
 .container-inner {
   max-width: 70%;
   flex: 1 0 70%;
   display: flex;
   flex-direction: column;
-  padding: 1.5rem 0;
+  padding: 1rem 0;
 }
 .content {
   flex-grow: 1;
@@ -54,7 +54,7 @@
 .image-container::before {
   display: block;
   content: '';
-  padding-bottom: 100%;
+  padding-bottom: 60%;
 }
 .image-container::after {
   display: block;
